# rk3588

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
src/encoder/: encoder_mpp.cpp  encoder_mpp.h
src/utils/: mpp_enc_roi_utils.c
